@@ -133,6 +133,8 @@ Changes since 2.3.0
     make process.  This test should be run outside of make.
 52. src/slmisc.c: Corrected a typo in the error message introduced in
     change #49 (Manfred Hanke).
+53. src/sltime.c: Added _ftime, which returns the number of
+    (wallclock) seconds since an epoch.
 
 {{{ Previous Versions
 
